# django_412

./: .env example  .gitignore  notes.md  pyproject.toml
barbershop/: settings.py  urls.py
blog/: models.py  urls.py
blog/migrations/: 0001_initial.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_master_alter_order_phone.py  0002_remove_order_date_order_date_create_and_more.py  0003_order_services_2.py  0004_alter_master_photo.py  0005_service_rename_addres_master_address_and_more.py  0006_alter_order_options_alter_service_options_and_more.py  0007_order_services.py  0008_alter_master_first_name_alter_master_phone_and_more.py  0009_master_viev_count.py  0010_rename_viev_count_master_view_count.py  0011_alter_service_duration_review.py  0012_alter_master_options_alter_service_options_and_more.py  0013_alter_service_duration_alter_service_is_popular.py
core/templates/core/: landing.html  order_card_include.html  order_detail.html  order_form.html  orders_list.html  service_detail.html  service_form.html  services_list.html  thanks.html
core/templatetags/: price_extras.py
static/css/: main.css
static/js/: order_detail.js  order_form.js  test.js
templates/: base.html  nav_menu_include.html  test.html  thanks.html
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  register.html
